[package]
name = "json-relay-server"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
warp = "0.3.1"
futures = "0.3.17"
serde_json = "1.0.67"
